[tool.poetry]
name = "pdf2txt"
version = "0.1.0"
description = "use AWs Textract to convert PDF to text"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src/convert" }
]


[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1"
boto3 = "^1.35"
pdf2image = "^1.16"
pillow = "^10.4.0"
pytesseract = "^0.3.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
pdf2txt = "src.convert.runner:cli"